projects/online-shop/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-service
spec:
  selector:
    app: online-shop
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
