projects/online-shop/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: online-shop.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: online-shop-service
            port: 
              number: 3000
